added folder architecture react-redux connected-router and webpack

--- a/package.json
+++ b/package.json
@@ -7,16 +7,30 @@
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^7.1.5",
+    "@types/webpack-env": "^1.14.1",
+    "connected-react-router": "^6.5.2",
+    "css-loader": "^3.2.0",
+    "history": "^4.10.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
+    "react-router": "latest",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "typescript": "3.6.4"
+    "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.0",
+    "typescript": "3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "webpack-dev-server",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.3",
+    "@types/react-router": "^5.1.2"
   }
 }
