--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.19",
+    "@types/jest": "^24.0.19",
     "@types/node": "12.11.1",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
@@ -22,6 +22,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
     "typescript": "3.6.4",
     "webpack": "^4.41.2",
@@ -29,9 +30,9 @@
     "webpack-dev-server": "^3.9.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack --mode production",
-    "test": "react-scripts test",
+    "dev": "webpack-dev-server --config webpack/webpack.config.js --open",
+    "build": "webpack --config webpack/webpack.config.js --mode production",
+    "test": "jest --config test/jest.config.js --coverage ",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,7 +51,12 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
     "@types/history": "^4.7.3",
-    "@types/react-router": "^5.1.2"
+    "@types/react-router": "^5.1.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.11.0"
   }
 }
