--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack/webpack.config.js --open",
     "build": "webpack --config webpack/webpack.config.js --mode production",
-    "test": "jest --config test/jest.config.js --coverage ",
-    "eject": "react-scripts eject"
+    "test": "jest --config test/jest.config.js --coverage "
   },
   "eslintConfig": {
     "extends": "react-app"
